--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,8 @@
 {% capture canonical %}{{ site.url }}{% if site.permalink contains '.html' %}{{ page.url }}{% else %}{{ page.url | remove:'index.html' | strip_slash }}{% endif %}{% endcapture %}
 <link rel="canonical" href="{{ canonical }}">
 <link href="{{ site.url }}/feed.xml" type="application/atom+xml" rel="alternate" title="{{ site.title }} All Posts Feed">
-<link href="{{ site.url }}/feed.blog.xml" type="application/atom+xml" rel="alternate" title="{{ site.title }} Blog Feed">
-<link href="{{ site.url }}/feed.music.xml" type="application/atom+xml" rel="alternate" title="{{ site.title }} Music Feed">
+<link href="{{ site.url }}/feed.beitraege.xml" type="application/atom+xml" rel="alternate" title="{{ site.title }} Beitragsfeed">
+<link href="{{ site.url }}/feed.folgen.xml" type="application/atom+xml" rel="alternate" title="{{ site.title }} Folgen Feed">
 
 <!-- https://t.co/dKP3o1e -->
 <meta name="HandheldFriendly" content="True">
